--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -3,18 +3,9 @@
 {% block title %}Hello CategoryController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
     <ul>
-        <li>Your controller at <code><a href="{{ 'C:/projets-cours/my_app_quiz/src/Controller/CategoryController.php'|file_link(0) }}">src/Controller/CategoryController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/projets-cours/my_app_quiz/templates/category/index.html.twig'|file_link(0) }}">templates/category/index.html.twig</a></code></li>
+        {% for category in categories %}
+        <li>{{category.title}}</li>
+        {% endfor %}
     </ul>
-</div>
 {% endblock %}
